# pyretailscience

./: .codiumai.toml  .env_sample  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_MD_ADDITIONS.md  CLAUDE_MD_INTEGRATION_GUIDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_PLAN_SUMMARY.md  QUICK_START_DEBT_ASSESSMENT.md  README.md  REGRESSION_ENHANCEMENT_SPEC.md  RELEASE_PROCESS.md  TECHNICAL_DEBT_FRAMEWORK.md  cliff.toml  demo_regression.py  mkdocs.yml  options_template.toml  pr-checklist-complete.md  pr-checklist.md  pyproject.toml  python_compatibility_test_log.md  revenue_tree_matplotlib.py  taplo.toml  technical_debt_report.txt  test_bad_code.py  tox.ini  versions.json
.claude/: settings.local.json
.claude/commands/: review-pr-tests.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bigquery-integration.yml  claude-code-review.yml  claude.yml  cloudflare-docs-preview.yml  docs.yml  gh-page.yml  github-pages.yml  mkdocs.yml  pypi.yml  pyspark-integration.yml  python-versions.yml  release.yml  slack-notifications.yml  snowflake-integration.yml  test.yml
0.16.0/: sitemap.xml
0.17.0/: 404.html  index.html  sitemap.xml
0.18.0/: 404.html  index.html  sitemap.xml
0.18.0/analysis_modules/: index.html
0.18.0/versions/: index.html
0.21.0/analysis_modules/: index.html
0.22.0/versions/: index.html
0.23.0/analysis_modules/: index.html
0.23.0/overrides/: home.html
0.24.0/: sitemap.xml
0.24.0/search/: search_index.json
0.25.0/: index.html
0.25.0/versions/: index.html
0.26.0/: 404.html  index.html
0.26.0/analysis_modules/: index.html
0.27.0/: 404.html  index.html  objects.inv
0.27.0/analysis_modules/: index.html
0.27.0/versions/: index.html
0.28.0/: index.html
0.28.0/search/: search_index.json
0.28.0/versions/: index.html
0.29.0/: robots.txt  sitemap.xml
0.30.0/analysis_modules/: index.html
0.32.0/: index.html
data/: default_data_config.yaml  transactions.parquet  walmart.toml
dev/: 404.html  index.html  sitemap.xml
dev/analysis_modules/: index.html
dev/overrides/: home.html
dev/stylesheets/: extra.css  home.css
dev/versions/: index.html
docs/: analysis_modules.md  index.md  metrics.md  robots.txt  versions.md
docs/api/: contracts.md  cross_shop.md  customer.md  gain_loss.md  options.md  product_association.md  range_planning.md  revenue_tree.md  segmentation.md  simulation.md  standard_graphs.md
docs/contributing/: release_guide.md
docs/examples/: contribution.ipynb  cross_shop.ipynb  data_contracts.ipynb  gain_loss.ipynb  loyality_executive.ipynb  product_association.ipynb  retention.ipynb  revenue_tree.ipynb  segmentation.ipynb  simulate_data.ipynb
docs/gallery/: index.md
docs/getting_started/: installation.md  options_guide.md
docs/overrides/: home.html  main.html
docs/stylesheets/: extra.css
examples/: data_contracts.ipynb  simulate_data.ipynb
latest/: 404.html  index.html
latest/analysis_modules/: index.html
latest/overrides/: home.html
latest/versions/: index.html
openretailscience/: __init__.py  constants.py  options.py  plugin.py
openretailscience/analysis/: cohort.py  composite_rank.py  cross_shop.py  customer.py  customer_decision_hierarchy.py  gain_loss.py  haversine.py  product_association.py  revenue_tree.py
openretailscience/metrics/: base.py
openretailscience/plots/: area.py  bar.py  broken_timeline.py  cohort.py  heatmap.py  histogram.py  index.py  line.py  period_on_period.py  price.py  scatter.py  time.py  tree_diagram.py  venn.py  waterfall.py
openretailscience/segmentation/: hml.py  nlr.py  rfm.py  segstats.py  threshold.py
openretailscience/utils/: date.py  filter_and_label.py  label.py  validation.py
pyretailscience/: __init__.py  constants.py  contribution.py  cross_shop.py  customer.py  date_utils.py  gain_loss.py  options.py  plugin.py  product_association.py  range_planning.py  revenue_tree.py  segmentation.py  standard_graphs.py
pyretailscience/analysis/: cohort.py  composite_rank.py  cross_shop.py  customer.py  customer_decision_hierarchy.py  gain_loss.py  haversine.py  product_association.py  purchase_path.py  revenue_tree.py  segmentation.py  shopping_missions.py  shopping_missions_sppmi.py  shopping_missions_tfidf.py  speed_drill.py
pyretailscience/data/: cli.py  contracts.py  simulation.py
pyretailscience/metrics/: base.py
pyretailscience/plots/: area.py  bar.py  broken_timeline.py  cohort.py  heatmap.py  histogram.py  index.py  line.py  period_on_period.py  price.py  scatter.py  time.py  tree_diagram.py  venn.py  waterfall.py
pyretailscience/segmentation/: __init__.py  base.py  hml.py  lapse.py  nlr.py  rfm.py  segstats.py  threshold.py
pyretailscience/style/: __init__.py  graph_utils.py  tailwind.py
pyretailscience/utils/: columns.py  date.py  embedding.py  filter_and_label.py  label.py  period.py  validation.py
scripts/: assess_technical_debt.sh  generate_social_content.sh
tests/: dummy_test.py  test_cross_shop.py  test_date_utils.py  test_gain_loss.py  test_options.py  test_plugin.py  test_product_association.py  test_range_planning.py  test_revenue_tree.py  test_segmentation.py  test_standard_graphs.py  test_time_utils.py
tests/analysis/: test_cohort.py  test_composite_rank.py  test_cross_shop.py  test_customer.py  test_customer_decision_hierarchy.py  test_gain_loss.py  test_haversine.py  test_product_association.py  test_purchase_path.py  test_range_planning.py  test_revenue_tree.py  test_segmentation.py  test_shopping_missions.py  test_shopping_missions_sppmi.py  test_shopping_missions_tfidf.py  test_speed_drill.py
tests/data/: test_contracts.py
tests/integration/: conftest.py  test_cohort_analysis.py  test_composite_rank.py  test_cross_shop.py  test_customer_decision_hierarchy.py  test_date.py  test_filter_and_label.py  test_haversine.py  test_hml_segmentation.py  test_product_association.py  test_revenue_tree.py  test_rfm_segmentation.py  test_segstats_segmentation.py  test_threshold_segmentation.py
tests/plots/: test_bar.py  (+16 more)
(+390 files in other folders)
