[project]
dependencies = [
    "duckdb>=1.0.0,<2",
    "graphviz>=0.20.3,<0.21",
    "ibis-framework[duckdb]>=10.0.0,<11",
    "loguru>=0.7.2,<0.8",
    "matplotlib-set-diagrams~=0.0.2",
    "matplotlib>=3.9.1,<4",
    "numpy>=1.26.3,<=2",
    "pandas>=2.2.2,<3",
    "pyarrow>=16.0.0,<17",
    "scikit-learn>=1.4.2,<2",
    "scipy>=1.13.0,<2",
    "toml>=0.10.2,<0.11",
    "tqdm>=4.66.1,<5",
]
description = "Retail Data Science Tools"
license = "Elastic-2.0"
name = "pyretailscience"
readme = "README.md"
requires-python = ">=3.11,<3.13"
version = "0.28.0"
[[project.authors]]
email = "2493311+mvanwyk@users.noreply.github.com"
name  = "Murray Vanwyk"

[dependency-groups]
dev = [
    "freezegun>=1.5.1,<2",
    "ibis-framework[bigquery]>=10.0.0,<11",
    "nbstripout>=0.7.1,<0.8",
    "pre-commit>=3.6.2,<4",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.14.0,<4",
    "pytest>=8.0.0,<9",
    "python-dotenv>=1.0.0,<2",
    "ruff>=0.9,<0.10",
    "tomlkit>=0.12,<1",
]
docs = [
    "mike>=1.1.2,<2",
    "mkdocs-jupyter>=0.24.6,<0.25",
    "mkdocs-material>=9.5.4,<10",
    "mkdocs>=1.5.3,<2",
    "mkdocstrings[python]>=0.24.0,<0.25",
]
examples = [ "jupyterlab>=4.2.5,<5", "tqdm>=4.66.1,<5" ]

[build-system]
build-backend = "hatchling.build"
requires      = [ "hatchling" ]

[tool.uv]
default-groups = [ "dev", "docs", "examples" ]

[tool.ruff]
line-length    = 120
show-fixes     = true
target-version = "py311"

[tool.ruff.lint]
ignore = [ "ANN101", "ANN102", "EM101", "PT011", "PTH123", "SLF001", "TRY003" ]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    "D1",
    "D2",
    "D3",
    "D4",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.pytest.ini_options]
addopts = "--cov=pyretailscience --cov-report=term-missing  --cov-branch"

[tool.coverage.run]
branch = true
source = [ "pyretailscience" ]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff.lint.per-file-ignores]
"*.ipynb"     = [ "T201" ]
"__init__.py" = [ "D104", "F401", "F403", "F405" ]
"tests/*"     = [ "ANN", "ARG", "INP001", "S101", "SLF001" ]

[tool.ruff.lint.pylint]
max-args       = 15
max-branches   = 20
max-returns    = 10
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
