[project]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "duckdb>=1.1.0,<1.4",
    "ibis-framework[duckdb]>=10.0.0,<11",
    "matplotlib-set-diagrams>=0.0.2,<0.3.0",
    "matplotlib>=3.9.1,<4",
    "numpy>=1.26.3,<3",
    "pandas>=2.2.3,<3",
    "pyarrow>=18.0.0,<24",
    "scikit-learn>=1.4.2,<2",
    "scipy>=1.14.1,<2",
    "textalloc>=1.2.1",
    "toml>=0.10.2,<0.11",
    "tqdm>=4.66.1,<5",
]
description = "Retail Data Science Tools"
license = "Elastic-2.0"
name = "pyretailscience"
readme = "README.md"
requires-python = ">=3.10,<3.14"
version = "0.44.0"
[[project.authors]]
email = "2493311+mvanwyk@users.noreply.github.com"
name  = "Murray Vanwyk"

[dependency-groups]
dev = [
    "freezegun>=1.5.1,<2",
    "ibis-framework[bigquery,pyspark,snowflake]>=10.0.0,<11",
    "nbstripout>=0.7.1,<0.8",
    "pre-commit>=3.6.2,<4",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.14.0,<4",
    "pytest>=8.0.0,<9",
    "python-dotenv>=1.0.0,<2",
    "ruff>=0.9,<1",
    "tomlkit>=0.12,<1",
    "tox>=4.0.0,<5",
]
docs = [
    "mkdocs-jupyter>=0.24.6,<0.25",
    "mkdocs-material>=9.5.4,<10",
    "mkdocs>=1.5.3,<2",
    "mkdocstrings[python]>=0.24.0,<0.25",
]
examples = [ "jupyterlab>=4.2.5,<5", "tqdm>=4.66.1,<5" ]

[build-system]
build-backend = "hatchling.build"
requires      = [ "hatchling" ]

[tool.uv]
default-groups = [ "dev", "docs", "examples" ]

[tool.ruff]
line-length    = 120
show-fixes     = true
src            = [ "pyretailscience", "tests" ]
target-version = "py310"

[tool.ruff.lint]
ignore = [ "COM812", "EM101", "ISC001", "PD010", "PD901", "PT011", "PTH123", "SLF001", "TRY003" ]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    "D1",
    "D2",
    "D3",
    "D4",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.pytest.ini_options]
addopts = "--cov=pyretailscience --cov-report=term-missing  --cov-branch --ignore=tests/integration --import-mode=importlib"

[tool.coverage.run]
branch = true
source = [ "pyretailscience" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing  = true
skip_covered  = true

[tool.ruff.lint.per-file-ignores]
"*.ipynb"     = [ "T201" ]
"__init__.py" = [ "D104", "F401", "F403", "F405" ]
"tests/*"     = [ "ANN", "ARG", "INP001", "S101", "SLF001" ]

[tool.ruff.lint.pylint]
max-args       = 15
max-branches   = 20
max-returns    = 10
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = [ "pyretailscience" ]

[tool.ruff.lint.pydocstyle]
convention = "google"
